--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<ul>
 		<li><h1>Damian Slavenburg</h1></li>
+		<h3>ik hou van gamen</h3>
 		<li><h2>Software Developer</h2></il>
 		<li><h3>ik heb voor software developer opleiding gekozen omdat ik programmeren heel leuk vindt en ik er graag een baan later in wil krijgen</h3></li>
 		<img src="damian.jpg" alt="professionele">   
