added css and upgraded

--- a/softwaredeveloper.html
+++ b/softwaredeveloper.html
@@ -23,22 +23,22 @@
       <li><a href="https://github.com/damianslavenburg" target="_blank">github</a></li>
     </ul>
   </div>
-  <div id='center' class="main center">
+    <div id='center' class="main center">
     <div class="mainInner">
-      <div>PURE CSS SIDEBAR TOGGLE MENU</div>
+      <div><h1>damian slavenburg</h1></div>
     </div>
     <div class="mainInner">
-      <div>PURE CSS SIDEBAR TOGGLE MENU</div>
+      <div><h3>hallo ik ben damian slavenburg
+        Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe, 
+        zoals het maken van deze website en css. Ik vind het leuk als dingen eerst niet werken en uiteindelijk werken 
+        mijn vader zit in systeembeheer, maar hij moet daar ook vaak programmeren,
+        dus ik heb het van hem, ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</h3></div>
     </div>
-    <div class="mainInner">
-      <div>PURE CSS SIDEBAR TOGGLE MENU</div>
-    </div>
-  </div>
+  
 <!-- partial -->
 
 	
 	<body>
-
 	</body>
 
 </html>
