--- a/softwaredeveloper.html
+++ b/softwaredeveloper.html
@@ -18,15 +18,12 @@
     <ul class="sidebarMenuInner">
       <li>damian slavenburg <span>software Developer</span></li>
       <li><a href="softwaredeveloper.html" target="_blank">software developer</a></li>
-      <li><a href="https://instagram.com/plavookac" target="_blank">hobby's</a></li>
+      <li><a href="hobby's.html" target="_blank">hobby's</a></li>
       <li><a href="aboutme.html" target="_blank">about me</a></li>
       <li><a href="https://github.com/damianslavenburg" target="_blank">github</a></li>
     </ul>
   </div>
     <div id='center' class="main center">
-    <div class="mainInner">
-      <div><h1>damian slavenburg</h1></div>
-    </div>
     <div class="mainInner">
       <div><h3>hallo ik ben damian slavenburg
         Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe, 
@@ -34,7 +31,7 @@
         mijn vader zit in systeembeheer, maar hij moet daar ook vaak programmeren,
         dus ik heb het van hem, ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</h3></div>
     </div>
-  
+
 <!-- partial -->
 
 	
