--- a/hobby's.html
+++ b/hobby's.html
@@ -25,20 +25,9 @@
   </div>
   <div id='center' class="main center">
     <div class="mainInner">
-      <div>PURE CSS SIDEBAR TOGGLE MENU</div>
-    </div>
-    <div class="mainInner">
-      <div>PURE CSS SIDEBAR TOGGLE MENU</div>
-    </div>
-    <div class="mainInner">
-      <div>PURE CSS SIDEBAR TOGGLE MENU</div>
-    </div>
+      <div>hobby's</div>
   </div>
-<!-- partial -->
 
-	
-	<body>
-
-	</body>
+</body>
 
 </html>
