--- a/softwaredeveloper.html
+++ b/softwaredeveloper.html
@@ -25,17 +25,14 @@
   </div>
     <div id='center' class="main center">
     <div class="mainInner">
-      <div><h3>hallo ik ben damian slavenburg
-        Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe, 
+      <div>waarom ik voor deze opleiding heb gekozen</div>
+    </div>
+    <div id='test' class="main test">
+    <div class="testmain">
+      <div><p>Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe, 
         zoals het maken van deze website en css. Ik vind het leuk als dingen eerst niet werken en uiteindelijk werken 
         mijn vader zit in systeembeheer, maar hij moet daar ook vaak programmeren,
-        dus ik heb het van hem, ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</h3></div>
-    </div>
-
-<!-- partial -->
-
-	
-	<body>
-	</body>
-
+        dus ik heb het van hem, ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</p></div>
+      </div>
+</body>
 </html>
