--- a/hobby's.html
+++ b/hobby's.html
@@ -26,6 +26,9 @@
   <div id='center' class="main center">
     <div class="mainInner">
       <div>hobby's</div>
+      <div id = 'test' class="test main">
+      <div class="maintest">
+      <div></div>
   </div>
 
 </body>
