--- a/aboutme.html
+++ b/aboutme.html
@@ -22,9 +22,22 @@
       <li><a href="aboutme.html" target="_blank">about me</a></li>
       <li><a href="https://github.com/damianslavenburg" target="_blank">github</a></li>
     </ul>
-
+  </ul>
+</div>
+  <div id='center' class="main center">
+  <div class="mainInner">
+    <div>informatie over damian</div>
   </div>
-  
-</body>
+<div id='aboutme' class="main aboutme">
+  <div clas="aboutmemain">
+    <div><h2>hallo ik ben damian slavenburg.
+      <p>ik hou van gamen, programmeren, en naar buiten gaan.</p>
+      <p>ik zit op de opleiding software developer.</p>
+      <p>ik ben 16 jaar werk bij de mac donalds als crew.</p>
+      <p>ik woon in leerdam in een rijtjes huis met me vader, moeder, me broer, en een kat genaamd jack.</p>
+    </h2>
+    </div>
+</div>
+  </body>
 
 </html>
