--- a/hobby's.html
+++ b/hobby's.html
@@ -26,8 +26,19 @@
   <div id='center' class="main center">
     <div class="mainInner">
       <div>hobby's</div>
-      <div id = 'test' class="test main">
-      <div class="maintest">
+      </div>
+      <div id = 'hobby' class="main hobby">
+      <div class="hobbymain">
+        <ul>
+      <div>
+          <h1>mijn hobby's zijn:</h1>
+        	<li>gamen</li>
+          <li>progammeren</li>
+          <li>chillen</li>
+        </ul>
+      </div>
+    
+    
       <div></div>
   </div>
 
