--- a/softwaredeveloper.html
+++ b/softwaredeveloper.html
@@ -29,11 +29,11 @@
     </div>
     <div id='test' class="main test">
     <div class="testmain">
-      <div>Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe,
+      <div><h2>Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe,
         zoals het maken van deze website en css.
         <p>Ik vind het leuk als dingen eerst niet werken en uiteindelijk werken.</p>
         <p>mijn vader zit in systeembeheer, maar hij moet daar ook vaak programmeren, dus ik heb het van heb.</p>
-        ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</div>
+        ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</h3></div>
       </div>
 </body>
 </html>
