--- a/hobby's.html
+++ b/hobby's.html
@@ -32,9 +32,9 @@
         <ul>
       <div>
           <h1>mijn hobby's zijn:</h1>
-        	<li>gamen</li>
+        	<h2><li>gamen</li>
           <li>progammeren</li>
-          <li>chillen</li>
+          <li>chillen</li></h2>
         </ul>
       </div>
     
