--- a/aboutme.html
+++ b/aboutme.html
@@ -35,6 +35,7 @@
       <p>ik zit op de opleiding software developer.</p>
       <p>ik ben 16 jaar werk bij de mac donalds als crew.</p>
       <p>ik woon in leerdam in een rijtjes huis met me vader, moeder, me broer, en een kat genaamd jack.</p>
+      <img src="damian.jpg" alt="damian" style="width:600px;height: 600px;">
     </h2>
     </div>
 </div>
