--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
     <div>informatie over damian</div>
   </div>
 <div id='aboutme' class="main aboutme">
-  <div clas="aboutmemain">
+  <div class="aboutmemain">
     <div><h2>hallo ik ben damian slavenburg.
       <p>ik hou van gamen, programmeren, en naar buiten gaan.</p>
       <p>ik zit op de opleiding software developer.</p>
