--- a/softwaredeveloper.html
+++ b/softwaredeveloper.html
@@ -27,13 +27,15 @@
     <div class="mainInner">
       <div>waarom ik voor deze opleiding heb gekozen</div>
     </div>
+    </div>
     <div id='test' class="main test">
     <div class="testmain">
       <div><h2>Ik heb voor deze opleiding gekozen omdat ik programmeren erg leuk vind en ik het ook graag in mijn vrije tijd doe,
         zoals het maken van deze website en css.
-        <p>Ik vind het leuk als dingen eerst niet werken en uiteindelijk werken.</p>
-        <p>mijn vader zit in systeembeheer, maar hij moet daar ook vaak programmeren, dus ik heb het van heb.</p>
-        ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</h3></div>
+        Ik vind het leuk als dingen eerst niet werken en uiteindelijk werken.
+        mijn vader zit in systeembeheer, maar hij moet daar ook vaak programmeren, dus ik heb het van heb.
+        ik probeerde ook vaak computers of beheerderswachtwoorden te hacken.</h2></div>
+      </div>
       </div>
 </body>
 </html>
