--- a/aboutme.html
+++ b/aboutme.html
@@ -17,27 +17,30 @@
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
       <li>damian slavenburg <span>software Developer</span></li>
-      <li><a href="softwaredeveloper.html" target="_blank">software developer</a></li>
-      <li><a href="hobby's.html" target="_blank">hobby's</a></li>
-      <li><a href="aboutme.html" target="_blank">about me</a></li>
+      <li><a href="softwaredeveloper.html">software developer</a></li>
+      <li><a href="hobby's.html">hobby's</a></li>
+      <li><a href="aboutme.html">about me</a></li>
       <li><a href="https://github.com/damianslavenburg" target="_blank">github</a></li>
     </ul>
-  </ul>
 </div>
   <div id='center' class="main center">
   <div class="mainInner">
     <div>informatie over damian</div>
   </div>
+</div>
+
 <div id='aboutme' class="main aboutme">
+
   <div class="aboutmemain">
-    <div><h2>hallo ik ben damian slavenburg.
-      <p>ik hou van gamen, programmeren, en naar buiten gaan.</p>
-      <p>ik zit op de opleiding software developer.</p>
-      <p>ik ben 16 jaar werk bij de mac donalds als crew.</p>
-      <p>ik woon in leerdam in een rijtjes huis met me vader, moeder, me broer, en een kat genaamd jack.</p>
+
+    <div><h2>hallo ik ben damian slavenburg.</h2>
+      <h2>ik hou van gamen, programmeren, en naar buiten gaan.</h2>
+      <h2>ik zit op de opleiding software developer.</h2>
+      <h2>ik ben 16 jaar werk bij de mac donalds als crew.</h2>
+      <h2>ik woon in leerdam in een rijtjes huis met me vader, moeder, me broer, en een kat genaamd jack.</h2>
       <img src="damian.jpg" alt="damian" style="width:600px;height: 600px;">
-    </h2>
     </div>
+  </div>
 </div>
   </body>
 
