--- a/softwaredeveloper.html
+++ b/softwaredeveloper.html
@@ -17,9 +17,9 @@
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
       <li>damian slavenburg <span>software Developer</span></li>
-      <li><a href="softwaredeveloper.html" target="_blank">software developer</a></li>
-      <li><a href="hobby's.html" target="_blank">hobby's</a></li>
-      <li><a href="aboutme.html" target="_blank">about me</a></li>
+      <li><a href="softwaredeveloper.html">software developer</a></li>
+      <li><a href="hobby's.html">hobby's</a></li>
+      <li><a href="aboutme.html">about me</a></li>
       <li><a href="https://github.com/damianslavenburg" target="_blank">github</a></li>
     </ul>
   </div>
